deployment-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdas
  namespace: rdas
spec:
  selector:
    app: rdas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
